--- a/src/index.css
+++ b/src/index.css
@@ -6,32 +6,10 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-size: 16px;
 }
 
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
-}
-
-.vertical {
-  width: 100%;
-  min-height: 300vh;
-  overflow-x: hidden;
-}
-
-.vertical::before {
-  content: "↑ Scroll ↓";
-  position: fixed;
-  display: inline-block;
-  padding: 4px;
-  top: 10px;
-  left: 50%;
-  text-align: center;
-  letter-spacing: 0.05em;
-  text-transform: uppercase;
-  background-color: rgba(30, 30, 30, 0.6);
-  border-radius: 3px;
-  color: white;
-  z-index: 1000;
-  transform: translate3d(-50%, 0, 0);
 }
